# Minesweeper-nw

./: Cargo.toml  README.md  bootstrap.sh  docker-compose.yml  justfile  note.txt  shell.sh  update.sh
.eadkp/: commands.just  config.env  docker-compose.base.yml  docker.sh  update.sh  utils.sh
.github/workflows/: rust.yml
assets/: icon.bbmodel
docs/: Optimization.md  Optimization_EN.md
src/: common.rs  grid.rs  main.rs  menu.rs  render.rs  save.rs
src/logic/: end_game.rs  game_over.rs  main_menu.rs  mod.rs  playing.rs
src/scenes/: end_game.rs  main_menu.rs  mod.rs  playing.rs
