[package]
name = "minesweeper_nw"
version = "0.1.0" # Doesn't matter, the real version number is the one in the github release
edition = "2024"

[lib]
path = "src/main.rs"
bench = false
test = false
crate-type = ["rlib", "cdylib"]
name = "minesweeper_nw"

[[example]]
name = "device"
path = "src/main.rs"
test = false
doctest = false
bench = false

[[example]]
name = "simulator"
path = "src/main.rs"
test = false
doctest = false
bench = false
crate-type = ["cdylib"]

[dependencies]
eadkp = { version = "0.20.0" }
embedded-alloc = "0.7.0"
postcard = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
heapless = "0.9"

[build-dependencies]
eadkp = { version = "0.20.0", features = ["build-tools"] }
